--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,11 @@
-
-
 name: Django-app workflow
 
-on: [push]
-
-
+on: [ push ]
 
 jobs:
   tests:
-  # «Раннер» — создание изолированного окружения с последней версией Ubuntu
-
+    # «Раннер» — создание изолированного окружения с последней версией Ubuntu
     runs-on: ubuntu-latest
-
 
     steps:
       # Запуск actions checkout — готового скрипта
@@ -20,11 +14,10 @@ jobs:
       - name: Set up Python
         # Запуск actions setup-python — готового скрипта
         # для развёртывания окружения Python
-
         uses: actions/setup-python@v2
         with:
+          # Выбор версии Python
           python-version: 3.7
-
 
       - name: Install dependencies
         run: |
@@ -33,7 +26,9 @@ jobs:
           # установка flake8 и его плагинов
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
           # установка зависимостей
-          pip install -r requirements.txt
-      - name:
+          pip install -r requirements.txt 
+
+      - name: Test with flake8 and django tests
+        run: |
           # запуск проверки проекта по flake8
-          python -m flake8 
+          python -m flake8          
